--- a/dashboard.html
+++ b/dashboard.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manage Invoices - Bondhon Enterprise</title>
+    <title>Dashboard - Bondhon Enterprise</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
-        /* Same CSS */
         body {
-            background-color: #f8f9fa
+            background-color: #f8f9fa;
         }
 
         .sidebar {
@@ -28,33 +27,55 @@
 
         .sidebar .nav-link {
             color: #adb5bd;
-            padding: 10px 20px
+            padding: 10px 20px;
+            font-size: 0.95rem;
+            /* Slightly smaller font for a cleaner look */
         }
 
         .sidebar .nav-link:hover,
         .sidebar .nav-link.active {
             color: #fff;
-            background-color: #495057
+            background-color: #495057;
         }
 
-        .sidebar .nav-link .fa {
+        .sidebar .nav-link.active {
+            font-weight: 600;
+        }
+
+        .sidebar .nav-link .fa-fw {
+            /* Use fa-fw for fixed-width icons */
             width: 20px;
             text-align: center;
-            margin-right: 10px
+            margin-right: 10px;
+        }
+
+        .sidebar .nav-sub-link {
+            padding-left: 3.2rem !important;
+            /* Indent sub-links */
+            font-size: 0.9rem;
         }
 
         .main-content {
             margin-left: 250px;
             padding: 20px;
-            padding-top: 70px
+            padding-top: 70px;
         }
 
         .navbar {
-            z-index: 1030
+            z-index: 1030;
+        }
+
+        .card-icon {
+            font-size: 2.5rem;
+            opacity: .3;
         }
 
         .navbar-brand {
-            font-weight: 700
+            font-weight: 700;
+        }
+
+        .user-info {
+            color: #dee2e6;
         }
     </style>
 </head>
@@ -74,8 +95,8 @@
             </div>
         </div>
     </nav>
-
     <div class="sidebar">
+        <!-- Reordered Navigation -->
         <nav class="nav flex-column">
             <!-- 1. Dashboard -->
             <a class="nav-link active" href="dashboard.html"><i class="fa fa-tachometer-alt fa-fw"></i> Dashboard</a>
@@ -155,60 +176,105 @@
         </nav>
     </div>
     <main class="main-content">
+        <!-- Dashboard content remains the same -->
         <div class="container-fluid">
             <div class="d-flex justify-content-between align-items-center mb-4">
-                <h1 class="h3">Manage Sales Invoices</h1>
-                <a href="sales-create.html" class="btn btn-primary"><i class="fa fa-plus me-1"></i> Create New
-                    Invoice</a>
+                <h1 class="h3">Dashboard</h1>
+                <div class="text-muted">As of 23 February 2025</div>
             </div>
-            <div class="card">
-                <div class="card-header">
-                    <div class="row g-2 align-items-center">
-                        <div class="col-md-8"><input type="text" class="form-control form-control-sm"
-                                id="invoiceSearchInput" placeholder="Search by Invoice #, Customer, Item..."></div>
-                        <div class="col-md-2"><button class="btn btn-sm btn-secondary w-100"
-                                id="filterBtn">Filter</button></div>
+            <div class="row">
+                <div class="col-md-3 mb-4">
+                    <div class="card text-white bg-primary h-100">
+                        <div class="card-body d-flex justify-content-between align-items-center">
+                            <div>
+                                <div class="card-title">TOTAL SALES (TODAY)</div>
+                                <div class="h3">৳ 11,845,209</div>
+                            </div><i class="fa fa-dollar-sign card-icon"></i>
+                        </div>
                     </div>
                 </div>
+                <div class="col-md-3 mb-4">
+                    <div class="card text-white bg-success h-100">
+                        <div class="card-body d-flex justify-content-between align-items-center">
+                            <div>
+                                <div class="card-title">TOTAL COLLECTION (TODAY)</div>
+                                <div class="h3">৳ 7,445,909</div>
+                            </div><i class="fa fa-hand-holding-dollar card-icon"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 mb-4">
+                    <div class="card text-white bg-warning h-100">
+                        <div class="card-body d-flex justify-content-between align-items-center">
+                            <div>
+                                <div class="card-title">TOTAL DUE (CUSTOMERS)</div>
+                                <div class="h3">৳ 3,654,836</div>
+                            </div><i class="fa fa-file-invoice card-icon"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 mb-4">
+                    <div class="card text-white bg-danger h-100">
+                        <div class="card-body d-flex justify-content-between align-items-center">
+                            <div>
+                                <div class="card-title">LOW STOCK ITEMS</div>
+                                <div class="h3">12 Items</div>
+                            </div><i class="fa fa-exclamation-triangle card-icon"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-7 mb-4">
+                    <div class="card">
+                        <div class="card-header"><i class="fa fa-chart-bar me-1"></i> Monthly Sales vs Purchases</div>
+                        <div class="card-body"><canvas id="salesPurchaseChart"></canvas></div>
+                    </div>
+                </div>
+                <div class="col-lg-5 mb-4">
+                    <div class="card">
+                        <div class="card-header"><i class="fa fa-chart-pie me-1"></i> Top Selling Brands</div>
+                        <div class="card-body"><canvas id="topBrandsChart"></canvas></div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header"><i class="fa fa-history me-1"></i> Recent Transactions</div>
                 <div class="card-body">
                     <div class="table-responsive">
-                        <table class="table table-hover">
-                            <thead class="table-light">
+                        <table class="table table-striped table-hover">
+                            <thead>
                                 <tr>
                                     <th>Date</th>
-                                    <th>Invoice #</th>
-                                    <th>Customer Name</th>
-                                    <th>Item(s)</th>
+                                    <th>Type</th>
+                                    <th>Details</th>
                                     <th class="text-end">Amount</th>
-                                    <th class="text-end">Paid</th>
-                                    <th class="text-center">Status</th>
-                                    <th class="text-center">Actions</th>
                                 </tr>
                             </thead>
-                            <tbody id="invoiceTableBody">
+                            <tbody>
                                 <tr>
-                                    <td>29-Jun-25</td>
-                                    <td>6773</td>
-                                    <td>Md. Mahfooz</td>
-                                    <td>43E40Z|SMART TV (25200)</td>
-                                    <td class="text-end">৳ 51,600</td>
-                                    <td class="text-end">৳ 51,600</td>
-                                    <td class="text-center"><span class="badge bg-success">Paid</span></td>
-                                    <td class="text-center"><a href="#"
-                                            class="btn btn-sm btn-outline-secondary print-btn" title="View/Print"><i
-                                                class="fa fa-print"></i></a></td>
+                                    <td>23-Feb-25</td>
+                                    <td><span class="badge bg-success">Sale</span></td>
+                                    <td>Invoice #5377 - Md. Jafar</td>
+                                    <td class="text-end">৳ 12,500</td>
                                 </tr>
                                 <tr>
-                                    <td>30-Jun-25</td>
-                                    <td>6781</td>
-                                    <td>Sobita Rani</td>
-                                    <td>WFA-2A3-GDXX-XX|REFRIGERATOR|27605</td>
-                                    <td class="text-end">৳ 35,400</td>
-                                    <td class="text-end">৳ 15,000</td>
-                                    <td class="text-center"><span class="badge bg-warning text-dark">Partial</span></td>
-                                    <td class="text-center"><a href="#"
-                                            class="btn btn-sm btn-outline-secondary print-btn" title="View/Print"><i
-                                                class="fa fa-print"></i></a></td>
+                                    <td>23-Feb-25</td>
+                                    <td><span class="badge bg-primary">Purchase</span></td>
+                                    <td>From Saleha Electronics - WFC-3F5-GDEL-XX</td>
+                                    <td class="text-end">৳ 52,088</td>
+                                </tr>
+                                <tr>
+                                    <td>23-Feb-25</td>
+                                    <td><span class="badge bg-info">Collection</span></td>
+                                    <td>Received from Salma Akter against Inv #1561</td>
+                                    <td class="text-end">৳ 4,000</td>
+                                </tr>
+                                <tr>
+                                    <td>24-Feb-25</td>
+                                    <td><span class="badge bg-danger">Expense</span></td>
+                                    <td>Entertainment - Customer</td>
+                                    <td class="text-end">৳ 120</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -218,16 +284,9 @@
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            document.getElementById('filterBtn').addEventListener('click', () => alert('Filtering applied! (This is a simulation)'));
-            document.querySelector('#invoiceTableBody').addEventListener('click', (e) => {
-                if (e.target.closest('.print-btn')) {
-                    alert('Generating print view for the invoice... (This is a simulation)');
-                    e.preventDefault();
-                }
-            });
-        });
+        const salesPurchaseCtx = document.getElementById("salesPurchaseChart").getContext("2d"); new Chart(salesPurchaseCtx, { type: "bar", data: { labels: ["October", "November", "December", "January", "February"], datasets: [{ label: "Sales", data: [52e5, 59e5, 81e5, 75e5, 11845209], backgroundColor: "rgba(54, 162, 235, 0.6)", borderColor: "rgba(54, 162, 235, 1)", borderWidth: 1 }, { label: "Purchases", data: [45e5, 51e5, 62e5, 68e5, 8249785], backgroundColor: "rgba(255, 159, 64, 0.6)", borderColor: "rgba(255, 159, 64, 1)", borderWidth: 1 }] }, options: { responsive: !0, scales: { y: { beginAtZero: !0 } } } }); const topBrandsCtx = document.getElementById("topBrandsChart").getContext("2d"); new Chart(topBrandsCtx, { type: "doughnut", data: { labels: ["VISION", "WALTON", "SAMSUNG", "ARAFAT", "OTHERS"], datasets: [{ label: "Sales by Brand", data: [12, 9, 4, 3, 5], backgroundColor: ["rgba(255, 99, 132, 0.8)", "rgba(54, 162, 235, 0.8)", "rgba(255, 206, 86, 0.8)", "rgba(75, 192, 192, 0.8)", "rgba(153, 102, 255, 0.8)"], hoverOffset: 4 }] }, options: { responsive: !0 } });
     </script>
 </body>
 
