--- a/index.html
+++ b/index.html
@@ -4,269 +4,212 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard - Bondhon Enterprise</title>
+    <title>Login - Bondhon Enterprise</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
-        /* Same CSS as before */
-        body {
-            background-color: #f8f9fa
+        :root {
+            --primary-color: #343a40;
+            --secondary-color: #007bff;
+            --background-color: #f8f9fa;
         }
 
-        .sidebar {
-            position: fixed;
+        html,
+        body {
+            height: 100%;
+        }
+
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: var(--background-color);
+        }
+
+        .login-container {
+            display: flex;
+            width: 100%;
+            max-width: 900px;
+            min-height: 550px;
+            background: #fff;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+        }
+
+        /* --- Branding Panel (Left Side) --- */
+        .branding-panel {
+            flex: 1;
+            background-image: url('https://images.unsplash.com/photo-1556740738-b6a63e27c4df?q=80&w=2070&auto=format&fit=crop');
+            background-size: cover;
+            background-position: center;
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            padding: 40px;
+            text-align: center;
+        }
+
+        .branding-panel::before {
+            content: '';
+            position: absolute;
             top: 0;
             left: 0;
+            right: 0;
             bottom: 0;
-            width: 250px;
-            padding: 70px 0 0;
-            background-color: #343a40;
-            color: #fff;
-            height: 100vh;
-            overflow-y: auto;
+            background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(52, 58, 64, 0.5));
+            z-index: 1;
         }
 
-        .sidebar .nav-link {
-            color: #adb5bd;
-            padding: 10px 20px
+        .branding-panel .logo,
+        .branding-panel .tagline {
+            position: relative;
+            z-index: 2;
         }
 
-        .sidebar .nav-link:hover,
-        .sidebar .nav-link.active {
-            color: #fff;
-            background-color: #495057
-        }
-
-        .sidebar .nav-link .fa {
-            width: 20px;
-            text-align: center;
-            margin-right: 10px
-        }
-
-        .main-content {
-            margin-left: 250px;
-            padding: 20px;
-            padding-top: 70px
-        }
-
-        .navbar {
-            z-index: 1030
-        }
-
-        .card-icon {
+        .branding-panel .logo {
             font-size: 2.5rem;
-            opacity: .3
+            font-weight: 700;
+            margin-bottom: 10px;
         }
 
-        .navbar-brand {
-            font-weight: 700
+        .branding-panel .tagline {
+            font-size: 1rem;
+            font-weight: 300;
+        }
+
+        /* --- Login Form (Right Side) --- */
+        .login-form-panel {
+            flex: 1;
+            padding: 50px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+
+        .login-form-panel h2 {
+            font-weight: 700;
+            color: var(--primary-color);
+            margin-bottom: 10px;
+        }
+
+        .login-form-panel p {
+            color: #6c757d;
+            margin-bottom: 30px;
+        }
+
+        .form-control {
+            border: 1px solid #ced4da;
+            border-radius: 8px;
+            padding: 12px 15px;
+            transition: border-color 0.2s;
+        }
+
+        .form-control:focus {
+            border-color: var(--secondary-color);
+            box-shadow: 0 0 0 0.25rem rgba(0, 123, 255, 0.25);
+        }
+
+        .btn-login {
+            background-color: var(--primary-color);
+            color: #fff;
+            border: none;
+            border-radius: 8px;
+            padding: 12px;
+            font-weight: 600;
+            width: 100%;
+            transition: background-color 0.2s;
+        }
+
+        .btn-login:hover {
+            background-color: #23272b;
+            color: #fff;
+        }
+
+        .forgot-password {
+            font-size: 0.9rem;
+            color: #6c757d;
+        }
+
+        /* --- Responsive Design --- */
+        @media (max-width: 768px) {
+            .login-container {
+                flex-direction: column;
+                min-height: auto;
+                max-width: 400px;
+            }
+
+            .branding-panel {
+                min-height: 200px;
+            }
+
+            .login-form-panel {
+                padding: 40px 30px;
+            }
         }
     </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="dashboard.html">Bondhon Enterprise</a>
-            <div class="ms-auto text-white"><i class="fa fa-user-circle"></i> Admin</div>
+
+    <div class="login-container">
+        <!-- Branding Panel -->
+        <div class="branding-panel">
+            <div class="logo">Bondhon Enterprise</div>
+            <p class="tagline">Your Complete Business Management Solution</p>
         </div>
-    </nav>
-    <div class="sidebar">
-        <nav class="nav flex-column">
-            <!-- Dashboard Link -->
-            <a class="nav-link" href="dashboard.html"><i class="fa fa-tachometer-alt"></i> Dashboard</a>
 
-            <!-- Sales Menu (Collapsible) -->
-            <a class="nav-link" data-bs-toggle="collapse" href="#salesCollapse" role="button" aria-expanded="false"
-                aria-controls="salesCollapse">
-                <i class="fa fa-file-invoice-dollar"></i> Sales <i class="fa fa-chevron-down fa-xs float-end mt-1"></i>
-            </a>
-            <div class="collapse show" id="salesCollapse">
-                <nav class="nav flex-column ms-3">
-                    <a class="nav-link" href="sales-create.html">New Invoice</a>
-                    <a class="nav-link" href="sales-manage-invoices.html">Invoice List</a>
-                    <a class="nav-link" href="sales-return-create.html">Process Return</a>
-                </nav>
+        <!-- Login Form Panel -->
+        <div class="login-form-panel">
+            <div>
+                <h2>Welcome Back!</h2>
+                <p>Please sign in to continue.</p>
+                <form id="loginForm">
+                    <div class="mb-3">
+                        <label for="username" class="form-label">Username</label>
+                        <input type="text" class="form-control" id="username" placeholder="Enter your username"
+                            required>
+                    </div>
+                    <div class="mb-4">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="Enter your password"
+                            required>
+                    </div>
+                    <div class="mb-4 form-check">
+                        <input type="checkbox" class="form-check-input" id="rememberMe">
+                        <label class="form-check-label" for="rememberMe">Remember me</label>
+                    </div>
+                    <button type="submit" class="btn btn-login mb-3">
+                        <i class="fa fa-sign-in-alt me-2"></i>Sign In
+                    </button>
+                    <div class="text-center">
+                        <a href="#" class="forgot-password">Forgot Password?</a>
+                    </div>
+                </form>
             </div>
-
-            <!-- Purchases Menu (Collapsible) -->
-            <a class="nav-link" data-bs-toggle="collapse" href="#purchasesCollapse" role="button" aria-expanded="false"
-                aria-controls="purchasesCollapse">
-                <i class="fa fa-shopping-cart"></i> Purchases <i class="fa fa-chevron-down fa-xs float-end mt-1"></i>
-            </a>
-            <div class="collapse show" id="purchasesCollapse">
-                <nav class="nav flex-column ms-3">
-                    <a class="nav-link" href="purchases-create.html">New Purchase</a>
-                    <!-- In a full app, you'd have a separate purchase list page -->
-                    <a class="nav-link" href="purchases-create.html">Purchase List</a>
-                </nav>
-            </div>
-
-            <!-- Inventory Menu (Collapsible) -->
-            <a class="nav-link" data-bs-toggle="collapse" href="#inventoryCollapse" role="button" aria-expanded="false"
-                aria-controls="inventoryCollapse">
-                <i class="fa fa-box-open"></i> Inventory <i class="fa fa-chevron-down fa-xs float-end mt-1"></i>
-            </a>
-            <div class="collapse show" id="inventoryCollapse">
-                <nav class="nav flex-column ms-3">
-                    <a class="nav-link" href="inventory-products.html">Product List</a>
-                    <a class="nav-link" href="items-manage.html">Item Categories</a>
-                    <a class="nav-link" href="brands-manage.html">Brands</a>
-                </nav>
-            </div>
-
-            <!-- Contacts Menu (Collapsible) -->
-            <a class="nav-link" data-bs-toggle="collapse" href="#contactsCollapse" role="button" aria-expanded="false"
-                aria-controls="contactsCollapse">
-                <i class="fa fa-users"></i> Contacts <i class="fa fa-chevron-down fa-xs float-end mt-1"></i>
-            </a>
-            <div class="collapse show" id="contactsCollapse">
-                <nav class="nav flex-column ms-3">
-                    <a class="nav-link" href="customers-list.html">Customers</a>
-                    <a class="nav-link" href="suppliers-manage.html">Suppliers</a>
-                </nav>
-            </div>
-
-            <!-- Finance Menu (Collapsible) -->
-            <a class="nav-link" data-bs-toggle="collapse" href="#financeCollapse" role="button" aria-expanded="false"
-                aria-controls="financeCollapse">
-                <i class="fa fa-wallet"></i> Finance <i class="fa fa-chevron-down fa-xs float-end mt-1"></i>
-            </a>
-            <div class="collapse show" id="financeCollapse">
-                <nav class="nav flex-column ms-3">
-                    <a class="nav-link" href="expenses-manage.html">Manage Expenses</a>
-                </nav>
-            </div>
-
-            <!-- Reports Menu (Collapsible) -->
-            <a class="nav-link" data-bs-toggle="collapse" href="#reportsCollapse" role="button" aria-expanded="false"
-                aria-controls="reportsCollapse">
-                <i class="fa fa-chart-pie"></i> Reports <i class="fa fa-chevron-down fa-xs float-end mt-1"></i>
-            </a>
-            <div class="collapse show" id="reportsCollapse">
-                <nav class="nav flex-column ms-3">
-                    <a class="nav-link" href="reports-sales.html">Sales Report</a>
-                    <a class="nav-link" href="reports-stock-ledger.html">Stock Ledger</a>
-                    <a class="nav-link" href="reports-customer-dues.html">Customer Dues</a>
-                </nav>
-            </div>
-
-            <!-- Settings Link -->
-            <a class="nav-link" href="settings.html"><i class="fa fa-cog"></i> Settings</a>
-        </nav>
+        </div>
     </div>
-    <main class="main-content">
-        <!-- Dashboard content remains the same -->
-        <div class="container-fluid">
-            <div class="d-flex justify-content-between align-items-center mb-4">
-                <h1 class="h3">Dashboard</h1>
-                <div class="text-muted">As of 23 February 2025</div>
-            </div>
-            <div class="row">
-                <div class="col-md-3 mb-4">
-                    <div class="card text-white bg-primary h-100">
-                        <div class="card-body d-flex justify-content-between align-items-center">
-                            <div>
-                                <div class="card-title">TOTAL SALES (TODAY)</div>
-                                <div class="h3">৳ 11,845,209</div>
-                            </div><i class="fa fa-dollar-sign card-icon"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 mb-4">
-                    <div class="card text-white bg-success h-100">
-                        <div class="card-body d-flex justify-content-between align-items-center">
-                            <div>
-                                <div class="card-title">TOTAL COLLECTION (TODAY)</div>
-                                <div class="h3">৳ 7,445,909</div>
-                            </div><i class="fa fa-hand-holding-dollar card-icon"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 mb-4">
-                    <div class="card text-white bg-warning h-100">
-                        <div class="card-body d-flex justify-content-between align-items-center">
-                            <div>
-                                <div class="card-title">TOTAL DUE (CUSTOMERS)</div>
-                                <div class="h3">৳ 3,654,836</div>
-                            </div><i class="fa fa-file-invoice card-icon"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 mb-4">
-                    <div class="card text-white bg-danger h-100">
-                        <div class="card-body d-flex justify-content-between align-items-center">
-                            <div>
-                                <div class="card-title">LOW STOCK ITEMS</div>
-                                <div class="h3">12 Items</div>
-                            </div><i class="fa fa-exclamation-triangle card-icon"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-7 mb-4">
-                    <div class="card">
-                        <div class="card-header"><i class="fa fa-chart-bar me-1"></i> Monthly Sales vs Purchases</div>
-                        <div class="card-body"><canvas id="salesPurchaseChart"></canvas></div>
-                    </div>
-                </div>
-                <div class="col-lg-5 mb-4">
-                    <div class="card">
-                        <div class="card-header"><i class="fa fa-chart-pie me-1"></i> Top Selling Brands</div>
-                        <div class="card-body"><canvas id="topBrandsChart"></canvas></div>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header"><i class="fa fa-history me-1"></i> Recent Transactions</div>
-                <div class="card-body">
-                    <div class="table-responsive">
-                        <table class="table table-striped table-hover">
-                            <thead>
-                                <tr>
-                                    <th>Date</th>
-                                    <th>Type</th>
-                                    <th>Details</th>
-                                    <th class="text-end">Amount</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>23-Feb-25</td>
-                                    <td><span class="badge bg-success">Sale</span></td>
-                                    <td>Invoice #5377 - Md. Jafar</td>
-                                    <td class="text-end">৳ 12,500</td>
-                                </tr>
-                                <tr>
-                                    <td>23-Feb-25</td>
-                                    <td><span class="badge bg-primary">Purchase</span></td>
-                                    <td>From Saleha Electronics - WFC-3F5-GDEL-XX</td>
-                                    <td class="text-end">৳ 52,088</td>
-                                </tr>
-                                <tr>
-                                    <td>23-Feb-25</td>
-                                    <td><span class="badge bg-info">Collection</span></td>
-                                    <td>Received from Salma Akter against Inv #1561</td>
-                                    <td class="text-end">৳ 4,000</td>
-                                </tr>
-                                <tr>
-                                    <td>24-Feb-25</td>
-                                    <td><span class="badge bg-danger">Expense</span></td>
-                                    <td>Entertainment - Customer</td>
-                                    <td class="text-end">৳ 120</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
     <script>
-        const salesPurchaseCtx = document.getElementById("salesPurchaseChart").getContext("2d"); new Chart(salesPurchaseCtx, { type: "bar", data: { labels: ["October", "November", "December", "January", "February"], datasets: [{ label: "Sales", data: [52e5, 59e5, 81e5, 75e5, 11845209], backgroundColor: "rgba(54, 162, 235, 0.6)", borderColor: "rgba(54, 162, 235, 1)", borderWidth: 1 }, { label: "Purchases", data: [45e5, 51e5, 62e5, 68e5, 8249785], backgroundColor: "rgba(255, 159, 64, 0.6)", borderColor: "rgba(255, 159, 64, 1)", borderWidth: 1 }] }, options: { responsive: !0, scales: { y: { beginAtZero: !0 } } } }); const topBrandsCtx = document.getElementById("topBrandsChart").getContext("2d"); new Chart(topBrandsCtx, { type: "doughnut", data: { labels: ["VISION", "WALTON", "SAMSUNG", "ARAFAT", "OTHERS"], datasets: [{ label: "Sales by Brand", data: [12, 9, 4, 3, 5], backgroundColor: ["rgba(255, 99, 132, 0.8)", "rgba(54, 162, 235, 0.8)", "rgba(255, 206, 86, 0.8)", "rgba(75, 192, 192, 0.8)", "rgba(153, 102, 255, 0.8)"], hoverOffset: 4 }] }, options: { responsive: !0 } });
+        document.getElementById('loginForm').addEventListener('submit', function (event) {
+            event.preventDefault(); // Prevent the default form submission
+
+            // Here you would typically add your authentication logic (e.g., an AJAX call)
+            // For this demo, we'll just navigate directly.
+
+            // Change the button text to show feedback
+            const loginButton = this.querySelector('button[type="submit"]');
+            loginButton.innerHTML = '<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Signing In...';
+            loginButton.disabled = true;
+
+            // Simulate a network request
+            setTimeout(() => {
+                window.location.href = 'dashboard.html';
+            }, 1000); // 1-second delay to show the loading state
+        });
     </script>
 </body>
 
