--- a/index.html
+++ b/index.html
@@ -170,13 +170,13 @@
                 <form id="loginForm">
                     <div class="mb-3">
                         <label for="username" class="form-label">Username</label>
-                        <input type="text" class="form-control" id="username" placeholder="Enter your username"
-                            required>
+                        <input type="text" class="form-control" id="username" value="admin"
+                            placeholder="Enter your username" required>
                     </div>
                     <div class="mb-4">
                         <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" placeholder="Enter your password"
-                            required>
+                        <input type="password" class="form-control" id="password" value="admin"
+                            placeholder="Enter your password" required>
                     </div>
                     <div class="mb-4 form-check">
                         <input type="checkbox" class="form-check-input" id="rememberMe">
