--- a/dashboard.html
+++ b/dashboard.html
@@ -19,40 +19,32 @@
             bottom: 0;
             width: 250px;
             padding: 70px 0 0;
-            background-color: #343a40;
-            color: #fff;
+            background-color: #f8f9fa;
+            ;
+            color: #212529;
             height: 100vh;
             overflow-y: auto;
         }
 
         .sidebar .nav-link {
-            color: #adb5bd;
-            padding: 10px 20px;
-            font-size: 0.95rem;
-            /* Slightly smaller font for a cleaner look */
+            color: #212529;
+            padding: 10px 20px
         }
 
         .sidebar .nav-link:hover,
         .sidebar .nav-link.active {
-            color: #fff;
-            background-color: #495057;
+            color: #212529;
+            background-color: #e4e5e6
         }
 
-        .sidebar .nav-link.active {
-            font-weight: 600;
-        }
-
-        .sidebar .nav-link .fa-fw {
-            /* Use fa-fw for fixed-width icons */
+        .sidebar .nav-link .fa {
             width: 20px;
             text-align: center;
-            margin-right: 10px;
+            margin-right: 10px
         }
 
-        .sidebar .nav-sub-link {
-            padding-left: 3.2rem !important;
-            /* Indent sub-links */
-            font-size: 0.9rem;
+        .nav-sub-link {
+            margin-left: 50px;
         }
 
         .main-content {
