--- a/reports-stock-ledger.html
+++ b/reports-stock-ledger.html
@@ -20,27 +20,32 @@
             bottom: 0;
             width: 250px;
             padding: 70px 0 0;
-            background-color: #343a40;
-            color: #fff;
+            background-color: #f8f9fa;
+            ;
+            color: #212529;
             height: 100vh;
             overflow-y: auto;
         }
 
         .sidebar .nav-link {
-            color: #adb5bd;
+            color: #212529;
             padding: 10px 20px
         }
 
         .sidebar .nav-link:hover,
         .sidebar .nav-link.active {
-            color: #fff;
-            background-color: #495057
+            color: #212529;
+            background-color: #e4e5e6
         }
 
         .sidebar .nav-link .fa {
             width: 20px;
             text-align: center;
             margin-right: 10px
+        }
+
+        .nav-sub-link {
+            margin-left: 50px;
         }
 
         .main-content {
