--- a/reports-sales.html
+++ b/reports-sales.html
@@ -116,10 +116,8 @@
     <!-- Sidebar -->
     <div class="sidebar">
         <nav class="nav flex-column">
-            <!-- 1. Dashboard -->
             <a class="nav-link active" href="dashboard.html"><i class="fa fa-tachometer-alt fa-fw"></i> Dashboard</a>
-
-            <!-- 2. Contacts Menu -->
+            <a class="nav-link" href="all-create.html"><i class="fa fa-tachometer-alt fa-fw"></i> Quick Add</a>
             <a class="nav-link" data-bs-toggle="collapse" href="#contactsCollapse" role="button" aria-expanded="true">
                 <i class="fa fa-users fa-fw"></i> Contacts <i class="fa fa-chevron-down fa-xs float-end mt-1"></i>
             </a>
@@ -129,8 +127,6 @@
                     <a class="nav-link nav-sub-link" href="suppliers-manage.html">Suppliers</a>
                 </nav>
             </div>
-
-            <!-- 3. Inventory Menu -->
             <a class="nav-link" data-bs-toggle="collapse" href="#inventoryCollapse" role="button" aria-expanded="true">
                 <i class="fa fa-box-open fa-fw"></i> Inventory <i class="fa fa-chevron-down fa-xs float-end mt-1"></i>
             </a>
@@ -141,8 +137,6 @@
                     <a class="nav-link nav-sub-link" href="brands-manage.html">Brands</a>
                 </nav>
             </div>
-
-            <!-- 4. Purchases Menu -->
             <a class="nav-link" data-bs-toggle="collapse" href="#purchasesCollapse" role="button" aria-expanded="true">
                 <i class="fa fa-shopping-cart fa-fw"></i> Purchases <i
                     class="fa fa-chevron-down fa-xs float-end mt-1"></i>
@@ -153,8 +147,6 @@
                     <a class="nav-link nav-sub-link" href="#">Purchase List</a>
                 </nav>
             </div>
-
-            <!-- 5. Sales Menu -->
             <a class="nav-link" data-bs-toggle="collapse" href="#salesCollapse" role="button" aria-expanded="true">
                 <i class="fa fa-file-invoice-dollar fa-fw"></i> Sales <i
                     class="fa fa-chevron-down fa-xs float-end mt-1"></i>
@@ -166,8 +158,6 @@
                     <a class="nav-link nav-sub-link" href="sales-return-create.html">Process Return</a>
                 </nav>
             </div>
-
-            <!-- 6. Finance Menu -->
             <a class="nav-link" data-bs-toggle="collapse" href="#financeCollapse" role="button" aria-expanded="true">
                 <i class="fa fa-wallet fa-fw"></i> Finance <i class="fa fa-chevron-down fa-xs float-end mt-1"></i>
             </a>
@@ -176,8 +166,6 @@
                     <a class="nav-link nav-sub-link" href="expenses-manage.html">Manage Expenses</a>
                 </nav>
             </div>
-
-            <!-- 7. Reports Menu -->
             <a class="nav-link" data-bs-toggle="collapse" href="#reportsCollapse" role="button" aria-expanded="true">
                 <i class="fa fa-chart-pie fa-fw"></i> Reports <i class="fa fa-chevron-down fa-xs float-end mt-1"></i>
             </a>
@@ -188,8 +176,6 @@
                     <a class="nav-link nav-sub-link" href="reports-customer-dues.html">Customer Dues</a>
                 </nav>
             </div>
-
-            <!-- 8. Settings Link -->
             <a class="nav-link" href="settings.html"><i class="fa fa-cog fa-fw"></i> Settings</a>
         </nav>
     </div>
